# Agentic-AI-Workshop

./: .gitignore  README.md  Sources.txt  agent copy 2.py  agent.py  agent_prompts.py  brief_agentic_AI_developments_2025.txt  brief_agentic_AI_developments_2026.txt  news-agent-refined.py  news-agent.py  news_agent.py  news_agent_refined.py  pyproject.toml  sample_digest_2026-03-12.md  sample_digest_2026-03-13.md
Templates/: agent copy 3.py  agent copy.py
